test/files/neg/interop_abstypetags_arenot_classmanifests.check
interop_abstypetags_arenot_classmanifests.scala:6: error: No ClassManifest available for T.
    println(implicitly[ClassManifest[T]])
                      ^
1 error
